edit(transactions): небольной рефакторинг, удалены ненужные поля в дто